# pokedex

./: .env.example  Cargo.toml  Dockerfile  readme.md
config/: default.toml
poke_api/: Cargo.toml
poke_api/src/: api.rs  errors.rs  lib.rs  models.rs
src/: errors.rs  main.rs
src/routes/: mod.rs  pokemon.rs
src/server/: app_handler.rs  mod.rs
src/settings/: mod.rs
