[package]
name = "pokedex"
version = "0.1.0"
edition = "2021"


[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.2.1"
config = "0.13.2"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.1"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
poke-api = { path = "poke_api" }
log = "0.4.17"
openssl = { version = "0.10", features = ["vendored"] }
futures-util = "0.3.25"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5"
